fixed some layout bugs and created FormsHelper

--- a/app/assets/stylesheets/alerts.scss
+++ b/app/assets/stylesheets/alerts.scss
@@ -1,3 +1,10 @@
+.alert {
+  ul {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
 .alert-success {
   background-color: $alert-success-bg;
 }
